--- a/练习/案例1.html
+++ b/练习/案例1.html
@@ -40,8 +40,9 @@
     <div id="app">
         <div class="add">
             品牌名称:
-            <input type="text">
-            <input type="button" value="添加">
+            <input type="text" v-model="itemname">
+            <input type="button" value="添加" @click="addItem()">
+
         </div>
 
         <div class="add">
@@ -57,7 +58,7 @@
                     <th>创立时间</th>
                     <th>操作</th>
                 </tr>
-                <tr v-for="(value,index) in list">
+                <tr v-for="(value,index) in list" ::key="index">
                     <td>{{index+1}}</td>
                     <td>{{value.name}}</td>
                     <td>{{value.date}}</td>
@@ -65,7 +66,7 @@
                         <a href="#">删除</a>
                     </td>
                 </tr>
-                <tr>
+                <tr v-if="list.length === 0">
                     <td colspan="4">没有品牌数据</td>
                 </tr>
             </table>
@@ -89,10 +90,16 @@
         new Vue({
             el: '#app',
             data: {
-                list
+                list,
+                itemname: ''
             },
             methods: {
-
+                addItem() {
+                    this.list.unshift({
+                        name: this.itemname,
+                        date: new Date()
+                    })
+                }
             },
         })
     </script>
