--- a/练习/案例1.html
+++ b/练习/案例1.html
@@ -63,7 +63,7 @@
                     <td>{{value.name}}</td>
                     <td>{{value.date}}</td>
                     <td>
-                        <a href="#">删除</a>
+                        <a href="#" @click.prevent="delItem(index)">删除</a>
                     </td>
                 </tr>
                 <tr v-if="list.length === 0">
@@ -99,6 +99,12 @@
                         name: this.itemname,
                         date: new Date()
                     })
+                },
+                delItem(index) {
+                    if (confirm('Sure?')) {
+                        this.list.splice(index, 1)
+                    }
+
                 }
             },
         })
