--- a/练习/案例1.html
+++ b/练习/案例1.html
@@ -42,7 +42,6 @@
             品牌名称:
             <input type="text" v-model="itemname">
             <input type="button" value="添加" @click="addItem()">
-
         </div>
 
         <div class="add">
@@ -61,7 +60,7 @@
                 <tr v-for="(value,index) in list" ::key="index">
                     <td>{{index+1}}</td>
                     <td>{{value.name}}</td>
-                    <td>{{value.date}}</td>
+                    <td>{{value.date | fmtDate}}</td>
                     <td>
                         <a href="#" @click.prevent="delItem(index)">删除</a>
                     </td>
@@ -75,6 +74,7 @@
     </div>
 
     <script src="../vue.js"></script>
+    <script src="../moment.js"></script>
     <script>
         let list = [{
             name: 'TCL',
@@ -86,6 +86,10 @@
             name: '娃娃',
             date: new Date()
         }]
+
+        Vue.filter('fmtDate', (v) => {
+            return moment(v).format('YYYY-MM-DD hh:mm:ss')
+        })
         /*实例化vue对象*/
         new Vue({
             el: '#app',
@@ -106,7 +110,7 @@
                     }
 
                 }
-            },
+            }
         })
     </script>
 </body>
