--- a/指令/14-指令-局部自定义指令.html
+++ b/指令/14-指令-局部自定义指令.html
@@ -5,33 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
 </head>
 
 <body>
     <div id="app">
-        <!-- v-model:
-            双向数据绑定 M->V V->M
-            是简化的语法(语法糖)
-            $event.target
-        -->
-        {{msg}}
-        <input v-model="msg">button</input>
-        <input :value="msg" @input="msg=$event.target.value">button</input>
+        <input type="text" v-focus>
     </div>
     <script src="../vue.js"></script>
     <script>
         /*实例化vue对象*/
-        var vm = new Vue({
+        new Vue({
             el: '#app',
-            data: {
-                msg: 'abc'
-            },
+            data: {},
             methods: {
                 sayHello() {
-                    console.log("Hello")
+                    console.log("Hello World")
                 }
-
+            },
+            directives: {
+                focus: {
+                    inserted(el) {
+                        el.focus()
+                    }
+                }
             }
         })
     </script>
