--- a/练习/案例1.html
+++ b/练习/案例1.html
@@ -41,13 +41,13 @@
         <div class="add">
             品牌名称:
             <input type="text" v-model="itemname">
-            <input type="button" value="添加" @click="addItem()">
+            <input :disabled="itemname.length===0" type="button" value="添加" @click="addItem()">
 
         </div>
 
         <div class="add">
             品牌名称:
-            <input type="text" placeholder="请输入搜索条件">
+            <input type="text" v-model="searchVal" placeholder="请输入搜索条件">
         </div>
 
         <div>
@@ -58,10 +58,10 @@
                     <th>创立时间</th>
                     <th>操作</th>
                 </tr>
-                <tr v-for="(value,index) in list" ::key="index">
+                <tr v-for="(value,index) in newlist" ::key="index">
                     <td>{{index+1}}</td>
                     <td>{{value.name}}</td>
-                    <td>{{value.date}}</td>
+                    <td>{{value.date | fmtDate}}</td>
                     <td>
                         <a href="#" @click.prevent="delItem(index)">删除</a>
                     </td>
@@ -74,6 +74,7 @@
 
     </div>
 
+    <script src="../moment.js"></script>
     <script src="../vue.js"></script>
     <script>
         let list = [{
@@ -86,12 +87,17 @@
             name: '娃娃',
             date: new Date()
         }]
+        // 定义全局过滤器
+        Vue.filter('fmtDate', (v) => {
+            return moment(v).format('YYYY-MM-DD hh:mm:ss')
+        })
         /*实例化vue对象*/
         new Vue({
             el: '#app',
             data: {
                 list,
-                itemname: ''
+                itemname: '',
+                searchVal: '',
             },
             methods: {
                 addItem() {
@@ -107,6 +113,16 @@
 
                 }
             },
+            computed: {
+                newlist() {
+                    return this.list.filter(
+                        (item) => {
+                            return item.name.startsWith(this.searchVal)
+                        }
+                    )
+                }
+            },
+
         })
     </script>
 </body>
