--- a/练习/案例1.html
+++ b/练习/案例1.html
@@ -76,6 +76,7 @@
 
     <script src="../moment.js"></script>
     <script src="../vue.js"></script>
+    <script src="../axios.js"></script>
     <script>
         let list = [{
             name: 'TCL',
