--- a/练习/案例1.html
+++ b/练习/案例1.html
@@ -41,12 +41,13 @@
         <div class="add">
             品牌名称:
             <input type="text" v-model="itemname">
-            <input type="button" value="添加" @click="addItem()">
+            <input :disabled="itemname.length===0" type="button" value="添加" @click="addItem()">
+
         </div>
 
         <div class="add">
             品牌名称:
-            <input type="text" placeholder="请输入搜索条件" ref="ref">
+            <input type="text" v-model="searchVal" placeholder="请输入搜索条件">
         </div>
 
         <div>
@@ -57,7 +58,7 @@
                     <th>创立时间</th>
                     <th>操作</th>
                 </tr>
-                <tr v-for="(value,index) in list" ::key="index">
+                <tr v-for="(value,index) in newlist" ::key="index">
                     <td>{{index+1}}</td>
                     <td>{{value.name}}</td>
                     <td>{{value.date | fmtDate}}</td>
@@ -73,8 +74,9 @@
 
     </div>
 
-    <script src="../vue.js"></script>
     <script src="../moment.js"></script>
+    <script src="../vue.js"></script>
+    <script src="../axios.js"></script>
     <script>
         let list = [{
             name: 'TCL',
@@ -86,7 +88,7 @@
             name: '娃娃',
             date: new Date()
         }]
-
+        // 定义全局过滤器
         Vue.filter('fmtDate', (v) => {
             return moment(v).format('YYYY-MM-DD hh:mm:ss')
         })
@@ -95,7 +97,8 @@
             el: '#app',
             data: {
                 list,
-                itemname: ''
+                itemname: '',
+                searchVal: '',
             },
             mounted() {
                 this.$refs.ref.focus()
@@ -113,7 +116,17 @@
                     }
 
                 }
-            }
+            },
+            computed: {
+                newlist() {
+                    return this.list.filter(
+                        (item) => {
+                            return item.name.startsWith(this.searchVal)
+                        }
+                    )
+                }
+            },
+
         })
     </script>
 </body>
